--- a/html/index_page.html
+++ b/html/index_page.html
@@ -2,12 +2,11 @@
 <html> 
     <head> 
         <style>
-
         </style>
     </head> 
 
     <body> 
-        <div>Main page</div>
+        <div id="index_main">Main page</div>
     </body> 
 
 </html>
