--- a/html/all_posts.html
+++ b/html/all_posts.html
@@ -5,7 +5,7 @@
     <style>
 
       smallheading {margin-bottom: 0px!important}
-      #taballposts {color: white; text-decoration: underline;}
+      #taballposts {color: white; border-bottom: 3px solid #eee}
       
      .allheaders {
         text-align: center;  
