--- a/html/all_posts.html
+++ b/html/all_posts.html
@@ -11,6 +11,12 @@
         display: none;
         margin-bottom: 60px;
         width: 100%;
+        text-decoration: none
+    }
+
+    .itemlink:hover {
+        text-decoration: none;
+        color: #ccc;
     }
 
     .itemlink div:not(.desc) {
@@ -39,14 +45,11 @@
         line-height: 1em;
         font-size: 50px;
         margin: auto;
+        display: block;
     }
 
     .desc {
         margin-top: 6px;
-    }
-
-    a {
-        text-decoration: none;
     }
 
     .postdate {
