--- a/html/all_posts.html
+++ b/html/all_posts.html
@@ -5,6 +5,10 @@
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Home</title>
     <style>
+    .hfeed.blog-posts {
+        margin-top: 0px
+    }
+
     .itemlink {
         display: none;
         margin-bottom: 60px;
