--- a/html/index_script.html
+++ b/html/index_script.html
@@ -1,6 +1,6 @@
 <script>
 
-if (window.location.href == 'https://www.maguro.one/') {
+if (window.location.href == 'https://www.maguro.one/' || window.location.href == 'https://www.maguro.one/?m=1') {
     index_page_init()
 }
 
