--- a/html/all_posts.html
+++ b/html/all_posts.html
@@ -52,6 +52,10 @@
     .bsuptitle {
         font-size: 40px;
     }
+      
+    .small .bsuptitle {
+        font-size: 24px;
+    }
 
     .desc {
         margin-top: 6px;
