--- a/karax/karax.html
+++ b/karax/karax.html
@@ -2,49 +2,632 @@
 <html>
 
 <head>
+   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://raw.githubusercontent.com/FluffyMaguro/HTML_files/main/karax/static/style.css"
-      type="text/css">
    <link rel="icon" type="image/jpg"
       href="https://raw.githubusercontent.com/FluffyMaguro/HTML_files/main/karax/static/favicon.jpg" />
    <title>Karax 2.0</title>
-   <link rel="stylesheet" href="https://raw.githubusercontent.com/FluffyMaguro/HTML_files/main/karax/static/karax.css"
-      type="text/css">
+
+   <style>
+      #fluffy {
+         position: absolute;
+         top: -2px;
+         right: 5px;
+         z-index: 1000;
+      }
+
+      #fluffy svg {
+         width: 180px;
+      }
+
+      @media screen and (max-width:450px) {
+         #fluffy {
+            display: none;
+         }
+      }
+
+      #fluffy svg g {
+         fill: #ccc;
+      }
+
+      .smaller {
+         font-size: 1.1rem !important;
+      }
+
+      #header {
+         position: relative;
+         height: 670px;
+         overflow: hidden;
+         width: 100%;
+         top: -0px;
+      }
+
+      #headerimgdiv {
+         width: 100%;
+         height: 100%;
+         text-align: center;
+         background-color: black;
+      }
+
+      #headerimgdiv img {
+         height: 100%;
+         width: 100%;
+         object-fit: cover;
+         overflow: hidden;
+         opacity: 0;
+         animation: headerimg-fade-in 2.5s forwards 0.5s, headerimg-breathe 12s infinite 3s;
+      }
+
+      @keyframes headerimg-fade-in {
+         0% {
+            opacity: 0;
+            transform: scale(1.08)
+         }
+
+         100% {
+            opacity: 1;
+            transform: scale(1.0)
+         }
+      }
+
+      @keyframes headerimg-breathe {
+         0% {
+            transform: scale(1.00)
+         }
+
+         50% {
+            transform: scale(1.02)
+         }
+
+         100% {
+            transform: scale(1.0)
+         }
+      }
+
+      #headertitlediv {
+         position: absolute;
+         width: 700px;
+         height: 100px;
+         text-align: center;
+         font-weight: bold;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         font-size: 100px;
+         color: white;
+         text-transform: uppercase;
+         text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5)
+      }
+
+      .smllh {
+         margin: auto;
+         text-align: center;
+      }
+
+      .smll {
+         text-align: center;
+         max-width: 660px;
+         margin: auto;
+      }
+
+      .smll p {
+         text-align: left;
+         line-height: 1.6;
+         font-size: 18px;
+         margin-left: 20px;
+         margin-bottom: 80px;
+      }
+
+      .imp {
+         color: #FFC84F
+      }
+
+      a.imp:hover {
+         color: #7EC4FF;
+      }
+
+      b,
+      h1 h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      strong {
+         font-weight: 700
+      }
+
+      html {
+         font-family: sans-serif;
+         -ms-text-size-adjust: 100%;
+         -webkit-text-size-adjust: 100%;
+         height: 100%
+      }
+
+      body {
+         margin: 0;
+         min-height: 100%;
+         line-height: 20px;
+         background-color: #080606;
+         font-family: Poppins, sans-serif;
+         color: #ccc;
+         font-size: 18px;
+         letter-spacing: -1px
+      }
+
+      video {
+         display: inline-block;
+         vertical-align: baseline
+      }
+
+      * {
+         -webkit-box-sizing: border-box;
+         -moz-box-sizing: border-box;
+         box-sizing: border-box
+      }
+
+      a {
+         text-decoration: none;
+         color: #ccc;
+      }
+
+      h1,
+      h2,
+      h3 {
+         margin-top: 20px;
+         margin-bottom: 10px
+      }
+
+      h1 {
+         line-height: 44px;
+         font-size: 38px
+      }
+
+      h3 {
+         font-size: 24px;
+         line-height: 30px;
+         margin-top: 0px;
+      }
+
+      p {
+         opacity: .9
+      }
+
+      ::-webkit-scrollbar {
+         width: 11px;
+      }
+
+      ::-webkit-scrollbar-track {
+         background: #060606;
+      }
+
+      ::-webkit-scrollbar-thumb {
+         background: #999;
+      }
+
+      :root {
+         --bg-link: url(https://raw.githubusercontent.com/FluffyMaguro/HTML_files/main/karax/static/bg.jpg);
+         --bg-opac: .7;
+      }
+
+      #twopoint {
+         margin-left: -250px;
+         opacity: 0;
+         animation: two_appear 1.5s forwards 1.5s ease-out
+      }
+
+      @media screen and (max-width:700px) {
+         #headertitlediv {
+            font-size: 60px;
+         }
+
+         #twopoint {
+            margin-left: -150px;
+            animation: two_appear_small 1.5s forwards 1.5s ease-out
+         }
+      }
+
+      @keyframes two_appear {
+         0% {
+            margin-left: -250px
+         }
+
+         60% {
+            margin-left: 0px
+         }
+
+         100% {
+            opacity: 1;
+            margin-left: 0px
+         }
+      }
+
+      @keyframes two_appear_small {
+         0% {
+            margin-left: -150px
+         }
+
+         60% {
+            margin-left: 0px
+         }
+
+         100% {
+            opacity: 1;
+            margin-left: 0px
+         }
+      }
+
+      #changelogh {
+         text-align: center;
+         font-family: 'Xolonium extranarrow', sans-serif;
+      }
+
+      #changelog {
+         max-width: 700px;
+         margin: auto;
+         font-size: 18px;
+         margin-top: 20px;
+         line-height: 1.6;
+      }
+
+      #changelog .unit {
+         margin-top: 24px;
+         font-weight: bold;
+         font-size: 22px;
+         color: #FFC84F;
+         list-style: none;
+         text-transform: uppercase;
+         margin-bottom: 5px;
+      }
+
+      #changelog .commentary::before {
+         content: "Commentary: "
+      }
+
+      #changelog .commentary {
+         margin-top: 10px;
+         margin-bottom: 10px;
+         line-height: 1.3;
+         color: #A3A3A3;
+         list-style: none
+      }
+
+      #footer {
+         border-top: 0.1px solid rgba(0, 0, 0, 0.85);
+         height: 700px;
+         display: block;
+         background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, .85)), to(rgba(0, 0, 0, .0))), var(--bg-link);
+         background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.0)), var(--bg-link);
+         background-attachment: scroll, fixed;
+         background-position: center bottom;
+         background-repeat: no-repeat;
+      }
+
+      #mdiv {
+         margin-top: 300px;
+         font-size: 350px;
+         text-align: center;
+         color: orange;
+         opacity: 0.5;
+         font-weight: bold;
+         font-family: "Verdana"
+      }
+
+      #attrib {
+         margin-top: 340px;
+         text-align: center;
+         color: #969696;
+         font-size: 16px;
+      }
+
+      .w-background-video {
+         overflow: hidden;
+         position: relative;
+         height: 500px;
+         color: #fff
+      }
+
+      .w-background-video>video {
+         background-size: cover;
+         background-position: 50% 50%;
+         position: absolute;
+         margin: auto;
+         width: 100%;
+         height: 100%;
+         right: -100%;
+         bottom: -100%;
+         top: -100%;
+         left: -100%;
+         object-fit: cover;
+         z-index: -100
+      }
+
+      .background-video,
+      .maincontent {
+         right: 0;
+         bottom: 0;
+         width: 100%;
+         top: 0
+      }
+
+      .heading-center,
+      .heading-units,
+      .unit-name {
+         font-family: 'Xolonium extranarrow', sans-serif;
+      }
+
+      .section.bar {
+         padding-top: 0;
+         padding-bottom: 0;
+         border-top: 20px solid #000;
+         background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, var(--bg-opac))), var(--bg-link));
+         background-image: linear-gradient(180deg, rgba(0, 0, 0, var(--bg-opac)), rgba(0, 0, 0, var(--bg-opac))), var(--bg-link);
+         background-attachment: scroll, fixed;
+         background-position: center bottom;
+         background-repeat: no-repeat;
+      }
+
+      .maincontent {
+         position: relative;
+         left: 0;
+         z-index: 1;
+         height: 100%;
+         padding: 80px;
+         background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, .83)), color-stop(10%, rgba(0, 0, 0, .76)), color-stop(44%, rgba(0, 0, 0, .36)));
+         background-image: linear-gradient(180deg, rgba(0, 0, 0, .83), rgba(0, 0, 0, .76) 10%, rgba(0, 0, 0, .36) 44%)
+      }
+
+      .maincontent.wide {
+         padding-top: 0;
+         padding-right: 0;
+         padding-left: 0;
+         background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, .83)), color-stop(10%, rgba(0, 0, 0, .76)), color-stop(44%, rgba(0, 0, 0, .36)));
+         background-image: linear-gradient(180deg, rgba(0, 0, 0, .83), rgba(0, 0, 0, .76) 10%, rgba(0, 0, 0, .36) 44%)
+      }
+
+      .maincontent.wide.home {
+         padding-bottom: 10px;
+         background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, .95)), color-stop(22%, rgba(0, 0, 0, .8)), color-stop(71%, rgba(0, 0, 0, .46)));
+         background-image: linear-gradient(180deg, rgba(0, 0, 0, .95), rgba(0, 0, 0, .8) 22%, rgba(0, 0, 0, .46) 71%)
+      }
+
+      .container {
+         color: #fff;
+         position: relative;
+         margin-right: auto;
+         margin-left: auto;
+         padding: 30px 50px
+      }
+
+      .container.home-heading {
+         padding-top: 4vw;
+         padding-bottom: 3vw
+      }
+
+      .heading-center {
+         margin-top: 10px;
+         font-size: 60px;
+         line-height: 78px;
+         font-weight: 400;
+         text-align: center
+      }
+
+      .heading-center.small {
+         font-family: Exo, sans-serif;
+         color: #fdc04c;
+         font-size: 38px;
+         line-height: 50px;
+         font-weight: 200
+      }
+
+      .heading-center.small.very {
+         color: #beae8e;
+         line-height: 28px;
+         font-size: 23px
+      }
+
+      .main-block-wide.center,
+      .rich-text-main.center {
+         text-align: center
+      }
+
+      .mainblock {
+         display: -webkit-box;
+         display: -webkit-flex;
+         display: -ms-flexbox;
+         display: flex;
+         overflow: visible;
+         width: 80%;
+         min-width: 920px;
+         margin-top: 3vw;
+         margin-bottom: 5vw;
+         background-image: linear-gradient(230deg, #414040, #333030 8%, rgba(41, 38, 38, .9) 36%, rgba(8, 6, 6, 0) 68%);
+         box-shadow: none;
+         outline: 1px solid rgba(255, 255, 255, 0.1);
+      }
+
+      .mainblock.right {
+         margin-left: auto;
+         background-image: linear-gradient(119deg, #414040, #333030 8%, rgba(32, 30, 30, .9) 36%, rgba(8, 6, 6, 0) 63%)
+      }
+
+      .main-block-text {
+         position: relative;
+         z-index: 1;
+         width: 550px;
+         padding: 70px 10px 45px 60px;
+         background-image: radial-gradient(circle farthest-side at -5% -5%, #4b4b4b, #292929 42%, rgba(19, 19, 19, 0) 80%);
+         color: #fff;
+         min-height: 500px;
+      }
+
+      .main-block-text.left {
+         z-index: 150;
+         padding-right: 60px;
+         background-image: radial-gradient(circle farthest-side at 105% -5%, #4b4b4b, #292929 42%, rgba(19, 19, 19, 0) 80%)
+      }
+
+      .main-block-text.xl {
+         width: 50%;
+         padding-right: 60px
+      }
+
+      .main-block-wide {
+         position: relative;
+         z-index: 10;
+         overflow: hidden;
+         -webkit-box-flex: 1;
+         -webkit-flex: 1;
+         -ms-flex: 1;
+         flex: 1
+      }
+
+      .rich-text-main {
+         position: relative;
+         z-index: 200;
+         margin-bottom: 10px;
+         -webkit-transform: skew(0deg, 0deg);
+         -ms-transform: skew(0deg, 0deg);
+         transform: skew(0deg, 0deg);
+         color: #fff;
+         font-size: 18px;
+         line-height: 30px;
+         font-weight: 300;
+         letter-spacing: 0
+      }
+
+      .rich-text-main h1 {
+         font-family: 'Xolonium extranarrow', sans-serif;
+         margin-top: 20px;
+         margin-bottom: 30px;
+         font-size: 40px;
+         line-height: 52px;
+         letter-spacing: -.5px;
+         text-shadow: 2px 2px 6px rgba(0, 0, 0, .74)
+      }
+
+      .main-block-video,
+      .video-close-2 {
+         position: absolute;
+         left: 0;
+         top: 0;
+         right: 0;
+         bottom: 0
+      }
+
+      .main-block-video {
+         height: 100%;
+         -webkit-transition: all 380ms cubic-bezier(.357, .042, .462, .96);
+         transition: all 380ms cubic-bezier(.357, .042, .462, .96)
+      }
+
+      .heading-3 {
+         color: #fdc04c;
+         font-size: 34px;
+         font-weight: 300;
+         text-shadow: 1px 1px 3px rgba(0, 0, 0, .53)
+      }
+
+      @media screen and (max-width:991px) {
+         #navigationbar {
+            padding-left: 10px;
+         }
+
+         .maincontent {
+            background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, .83)), color-stop(16%, rgba(0, 0, 0, .76)), color-stop(56%, rgba(0, 0, 0, .36)));
+            background-image: linear-gradient(180deg, rgba(0, 0, 0, .83), rgba(0, 0, 0, .76) 16%, rgba(0, 0, 0, .36) 56%)
+         }
+
+         .heading-center {
+            font-size: 50px
+         }
+
+         .main-block-text,
+         .main-block-text.left {
+            background-image: none;
+            box-shadow: none
+         }
+
+         .mainblock {
+            width: 90%;
+            min-width: auto;
+            -webkit-flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap
+         }
+
+         .mainblock.right {
+            -webkit-flex-wrap: wrap-reverse;
+            -ms-flex-wrap: wrap-reverse;
+            flex-wrap: wrap-reverse
+         }
+
+         .main-block-text {
+            z-index: 150;
+            width: 100%
+         }
+
+         .main-block-text.xl {
+            width: 80%
+         }
+
+         .main-block-wide {
+            height: 300px;
+            -webkit-box-flex: 100%;
+            -webkit-flex: 100%;
+            -ms-flex: 100%;
+            flex: 100%
+         }
+      }
+
+      @media screen and (max-width:700px) {
+         .main-block-text {
+            padding: 70px 5px 1px 15px;
+            width: 100%
+         }
+
+         .rich-text-main {
+            width: 100%
+         }
+
+         .rich-text-main p {
+            width: 100%
+         }
+
+         .main-block-text.xl {
+            padding-right: 30px;
+            width: 100%
+         }
+
+         .rich-text-main.smll,
+         .rich-text-main.smll p {
+            width: 100%;
+         }
+
+         .container.home-heading {
+            padding: 0px;
+            padding-right: 25px;
+         }
+      }
+
+      #headertitlediv {
+         font-family: 'Xolonium extranarrow', sans-serif;
+      }
+
+      .smllh {
+         font-family: 'Xolonium extranarrow', sans-serif;
+      }
+
+      @font-face {
+         font-family: 'Xolonium extranarrow';
+         src: url('https://raw.githubusercontent.com/FluffyMaguro/HTML_files/main/karax/static/Xolonium-Regular.otf') format('opentype');
+         font-weight: normal;
+         font-style: normal;
+      }
+   </style>
 </head>
 
 <body>
-   <div id="navigationbar">
-      <div><span>Posts</span>
-         <div class="spacer"></div>
-         <ul>
-            <a href="/karax">
-               <li><span>Karax </span><span class="smaller">2.0</span></li>
-            </a>
-         </ul>
-      </div>
-      <div><span>Links</span>
-         <div class="spacer"></div>
-         <ul>
-            <a href="https://www.maguro.one" target="_blank">
-               <li>Blog</li>
-            </a>
-            <a href="https://twitter.com/FluffyMaguro" target="_blank">
-               <li>Twitter</li>
-            </a>
-            <a href="https://www.twitch.tv/fluffymaguro" target="_blank">
-               <li>Twitch</li>
-            </a>
-            <a href="https://www.youtube.com/channel/UCVZ2VbhcwN3fI5Tt8fqQrtw" target="_blank">
-               <li>Youtube</li>
-            </a>
-            <a href="https://analysis.maguro.one/" target="_blank">
-               <li>Tour. Analysis</li>
-            </a>
-         </ul>
-      </div>
-      <div><a href="/contact"><span>Contact</span></a></div>
-
-   </div>
+   <a href="https://www.maguro.one/">
    <div id="fluffy">
       <?xml version="1.0" encoding="UTF-8"?>
       <svg width="318.42" height="35.4" viewBox="0 0 84.25 9.3662" xmlns="http://www.w3.org/2000/svg">
@@ -73,7 +656,7 @@
                d="m118.92 74.378c0 1.2171 1.0583 1.2171 2.1167 1.2171h1.905c1.0583 0 2.1167 0 2.1167-1.2171v-2.6458c0-1.2171-1.0583-1.2171-2.1167-1.2171h-1.905c-1.0583 0-2.1167 0-2.1167 1.2171zm1.4817 0.10583v-2.8575c0-0.3175 0.26458-0.3175 0.52916-0.3175h2.1167c0.26458 0 0.52917 0 0.52917 0.3175v2.8575c0 0.3175-0.26459 0.3175-0.52917 0.3175h-2.1167c-0.26458 0-0.52916 0-0.52916-0.3175z" />
          </g>
       </svg>
-   </div>
+   </div></a>
    <div id="maincontentdiv">
       <div id="header">
          <div id="headerimgdiv">
