Fixes and karax tweak

--- a/html/all_posts.html
+++ b/html/all_posts.html
@@ -373,11 +373,11 @@
         <p class="btitle">Skill Curves<br>
           &amp; Flow</p>
       </div>
-    </a> <a class="itemlink" href="https://info.maguro.one/karax">
+    </a> <a class="itemlink" href="https://www.maguro.one/p/karax.html">
       <div style="background-image: url('https://1.bp.blogspot.com/-UAUaFXXoGeA/YACqT81LQ8I/AAAAAAAAKIM/4mkMnUB-1ngB-XIywxU7JOyOw6OW3t73QCLcBGAsYHQ/s675/karax2.jpg')">
         <p class="btitle">Karax 2.0</p>
       </div>
-    </a> <a class="itemlink" href="https://analysis.maguro.one/">
+    </a> <a class="itemlink" href="">
       <div style="background-image: url('https://1.bp.blogspot.com/-t1UN_cvAIdI/YACqfx2f5eI/AAAAAAAAKKI/knwSZVtv3NYbI1G3hG02IC8FyAEMZhRTACLcBGAsYHQ/s675/web_app.jpg')">
         <p class="btitle">Web App</p>
       </div>
