--- a/html/all_posts.html
+++ b/html/all_posts.html
@@ -8,6 +8,10 @@
         margin-top: 0px
     }
 
+    #fallbackdiv {
+        margin-top: -26px
+    }
+
     .itemlink {
         display: none;
         margin-bottom: 60px;
